Assert fails in some tests #98374

Closed
opened 2022-05-25 17:10:24 +02:00 by Martijn Versteegh · 9 comments

System Information
Operating system: Linux-5.4.0-113-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.129.06

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-25 11:58, hash: c980ed27f0
Worked: 3.1.2

Caused by 5188c14718

Short description of error
Some tests fail in debug mode. For example:
12 - script_pyapi_text (Child aborted)

All failing test fail with a failed assert:

12: BLI_assert failed: source/blender/blenkernel/intern/lib_id_delete.c:341, id_delete(), at 'id->us == 0'

Exact steps for others to reproduce the error

  • Build a debug version of current master
  • run the tests by running ctest in the build dir.
**System Information** Operating system: Linux-5.4.0-113-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.129.06 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-25 11:58, hash: `c980ed27f0` Worked: 3.1.2 Caused by 5188c14718 **Short description of error** Some tests fail in debug mode. For example: 12 - script_pyapi_text (Child aborted) All failing test fail with a failed assert: 12: BLI_assert failed: source/blender/blenkernel/intern/lib_id_delete.c:341, id_delete(), at 'id->us == 0' **Exact steps for others to reproduce the error** - Build a debug version of current master - run the tests by running ctest in the build dir.
Author
Member

Added subscriber: @Baardaap

Added subscriber: @Baardaap
Author
Member

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @antoniov

Added subscriber: @antoniov

This is similar to #98260

This is similar to #98260
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I know it is just an assert, but since it is a recent regression, would like to raise awareness and have @mont29 check.

I know it is just an assert, but since it is a recent regression, would like to raise awareness and have @mont29 check.

This issue was referenced by 5625a21fc7

This issue was referenced by 5625a21fc7cf3738278f02038cb6d8a3c2344584

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-27 10:50:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98374
No description provided.